Generando la documentacion restante
